@@ -37,7 +37,6 @@ CREATE TABLE tx_comments_urllog (
 	crdate int(11) unsigned DEFAULT '0' NOT NULL,
 	deleted tinyint(1) unsigned DEFAULT '0' NOT NULL,
 	external_ref varchar(255) DEFAULT '' NOT NULL,
-#	external_prefix varchar(255) DEFAULT '' NOT NULL,
 	url text NOT NULL,
 
 	PRIMARY KEY (uid),
